resolucao bug card selecionar card

--- a/src/app/feature/pages/site-dashboard/site-dashboard.css
+++ b/src/app/feature/pages/site-dashboard/site-dashboard.css
@@ -77,10 +77,11 @@
 }
 
 @media (max-width: 900px) {
-
-
     .container1 .side{
         width: 100%;
     }
 
+    .geo-chart{
+        display: none;
+    }
 }
