--- a/src/app/feature/pages/site-dashboard/site-dashboard.html
+++ b/src/app/feature/pages/site-dashboard/site-dashboard.html
@@ -63,7 +63,7 @@
         </div>
 
 
-        <div class="chart-container" style="height: 100%;">
+        <div class="chart-container geo-chart" style="height: 100%;">
             <app-geo-charts [geoData]="this.siteData().geoData"></app-geo-charts>
         </div>
 
