--- a/src/app/feature/pages/select-site/components/site-card/site-card.css
+++ b/src/app/feature/pages/select-site/components/site-card/site-card.css
@@ -24,3 +24,9 @@
 .card-container:hover{
     background-color: #e5e5e5;
 }
+
+@media (max-width: 450px){
+    .card-container{
+        width: 100%;
+    }
+}
