fix: responsive filter container

--- a/src/app/feature/pages/site-dashboard/site-dashboard.css
+++ b/src/app/feature/pages/site-dashboard/site-dashboard.css
@@ -84,4 +84,9 @@
     .geo-chart{
         display: none;
     }
+
+    .filter-container{
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
