--- a/src/app/feature/pages/site-dashboard/site-dashboard.css
+++ b/src/app/feature/pages/site-dashboard/site-dashboard.css
@@ -54,7 +54,7 @@
     color: #555555;
 }
 
-.container ::ng-deep .chart-container{
+.container .chart-container{
     background-color: #ffffffd5;
     border-radius: 12px;
     width: 100%;    
