feature: responsive hamburguer menu

--- a/src/app/shared/components/side-bar/side-bar.html
+++ b/src/app/shared/components/side-bar/side-bar.html
@@ -1,15 +1,22 @@
-<div class="side-bar-container" #sideBarContainer>
-    <div class="header-container">
-        <img ngSrc='monitor.avif' width="50" height="50"/>
-        <p>NG Web Analytics</p>
+<div class="side-bar-container" #sideBarContainer (click)="closeHamburguerMenu()">
+    <div class="content-container" (click)="stopPropagation($event)">
+        <i class="pi pi-bars hamburguer" (click)="openHamburguerMenu()"></i>
+        <div class="header-container">
+            <div class="wrapper">
+                <img ngSrc='monitor.avif' width="50" height="50"/>
+                <p>NG Web Analytics</p>
+            </div>
+
+            <button (click)="closeHamburguerMenu()" class="x-button">X</button>
+        </div>
+        <nav class="side-bar">
+            <ul>
+                @for(route of routes; track route.url){
+                    <li><a routerLink="{{route.url}}" [class.active]="route.url === currentRoute()">{{route.label}}</a></li>
+                }
+            </ul>
+        </nav>
     </div>
-    <nav class="side-bar">
-        <ul>
-            @for(route of routes; track route.url){
-                <li><a routerLink="{{route.url}}" [class.active]="route.url === currentRoute()">{{route.label}}</a></li>
-            }
-        </ul>
-    </nav>
 </div>
 
 
