--- a/src/app/shared/components/side-bar/side-bar.css
+++ b/src/app/shared/components/side-bar/side-bar.css
@@ -10,6 +10,7 @@
 .header-container{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
     padding: 20px;
     border-bottom: 1px solid #e0e0e0;
@@ -18,6 +19,20 @@
         font-weight: 600;
         color: var(--primary-color);
     }
+
+    & .wrapper{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+.x-button{
+    display: none;
+    justify-self: flex-end;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
 }
 
 .side-bar{
@@ -56,8 +71,34 @@
 
 @media (max-width: 768px) {
     .side-bar-container{
-        display: none;
+        position: absolute;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        transition: left 0.3s ease-in-out;
+        background-color: #00000073;
     }
 
+    .hamburguer{
+        position: absolute;
+        top: 20px;
+        left: calc(100% + 20px);
+        font-size: 24px;
+        z-index: 1000;
+        cursor: pointer;
+    }
 
+    .side-bar-container.open{
+        left: 0;
+    }
+
+    .content-container{
+        width: 60%;
+        height: 100%;
+        background-color: #F9F9F9;
+    }
+
+    .x-button{
+        display: block;
+    }
 }
