--- a/src/app/shared/components/side-bar/side-bar.css
+++ b/src/app/shared/components/side-bar/side-bar.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-
     width: 250px;
     background-color: #F9F9F9;
 }
@@ -25,6 +24,10 @@
         align-items: center;
         gap: 10px;
     }
+}
+
+.hamburguer{
+    display: none;
 }
 
 .x-button{
