fix: display none to hamburguer item in desktop mode

--- a/src/app/shared/components/side-bar/side-bar.css
+++ b/src/app/shared/components/side-bar/side-bar.css
@@ -83,6 +83,7 @@
     }
 
     .hamburguer{
+        display: block;
         position: absolute;
         top: 20px;
         left: calc(100% + 20px);
