fix: height do grafico de pizza de novos vs recorrentes

--- a/src/app/feature/pages/site-dashboard/components/devices-chart/devices-chart.html
+++ b/src/app/feature/pages/site-dashboard/components/devices-chart/devices-chart.html
@@ -1,5 +1,5 @@
 
-<div class="chart-container">
+<div class="chart-container" style="height:360px">
     <canvas baseChart
         [data]="devicesOverviewPieChartData()"
         [options]="devicesOverviewPieChartOptions"
